add pydbg support.

--- a/pic2pdf/pic2pdf.vcxproj.filters
+++ b/pic2pdf/pic2pdf.vcxproj.filters
@@ -53,4 +53,7 @@
       <Filter>资源文件</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\dlldbg.py" />
+  </ItemGroup>
 </Project>
