--- a/pic2pdf/pic2pdf.vcxproj
+++ b/pic2pdf/pic2pdf.vcxproj
@@ -19,7 +19,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v120_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
@@ -98,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="pic2pdf.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\dlldbg.py" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
